--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,10 +1,10 @@
 ﻿<section class="dz-row">
-	<header style="background: rgb(232, 232, 228); width: 100%; border-bottom: 1px solid #FBFBFB;">
+	@Html.Partial( "_LobbyLoginBar" )
+	<header style="background: rgb(232, 232, 228); width: 100%; border-top: 1px solid #E8E5E5;">
 		<div id="lobbyLogo">
 			<img src="~/Images/Logo/kkLogo.png" alt="logo" />
 		</div>
 	</header>
-	@Html.Partial( "_LobbyLoginBar" )
 
 	<nav id="lobbyNavContainer">
 		<a href="#0" class="selected-nav-link">Strona Główna</a>
